--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/router-plugin": "^1.132.0",
     "lucide-react": "^0.545.0",
     "react": "^19.0.0",
+    "react-animated-numbers": "^1.1.1",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6"
   },
